[package]
name = "environment"
version = "0.1.0"
authors = ["James Laverack <james@jameslaverack.com>"]

[dependencies]
tokio = "0.1"
tokio-io = "0.1"
futures = "0.1"
prost = "0.3.0"
prost-derive = "0.3.0"
prost-types = "0.3.0"
bytes = "0.4.6"
uuid = { version = "0.6", features = ["v4"] }
nphysics2d = "0.1.*"

[build-dependencies]
prost-build = "0.3.0"
